--- a/src/job.yml
+++ b/src/job.yml
@@ -1,15 +1,15 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
 code: model
 command: >-
-  python 
-  --
-  --
+  python train.py
+  --training_data ${{inputs.training_data}}
 inputs:
   training_data: 
-    type: uri_folder 
-    path: 
+    type: uri_folder
+    # name: diabetes-dev-folder
+    path: /home/amit/mlops/experimentation/data
   reg_rate: 0.01
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
-compute: 
-experiment_name: 
-description: 
+compute: amit-ml
+experiment_name: diabetes
+description: train a classification model on diabetes data using a registered dataset as input.
