--- a/src/job.yml
+++ b/src/job.yml
@@ -10,6 +10,6 @@ inputs:
     path: /home/runner/work/mlops/mlops/experimentation/data
   reg_rate: 0.01
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
-compute: amit-ml
+compute: amit-ml-cluster-compute
 experiment_name: diabetes
 description: train a classification model on diabetes data using a registered dataset as input.
