--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -1,11 +1,17 @@
 name: Manually trigger an Azure Machine Learning job
 
-on: [push]
+on:
+  push:
+    pull_request:
+      branches:
+        - main
 
 jobs:
   train:
     runs-on: ubuntu-latest
     steps:
+    - name: Placeholder
+      run: echo "Will add code checks here in next challenge"
     - name: Check out repo
       uses: actions/checkout@main
     - name: Install az ml extension
