--- a/.github/workflows/04-code-checks.yml
+++ b/.github/workflows/04-code-checks.yml
@@ -16,15 +16,15 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.8'
-    - name: Install Flake8
-      run: |
-        python -m pip install flake8
-    - name: Run linting tests
-      run: | 
-        flake8 src/model/
+    # - name: Install Flake8
+    #   run: |
+    #     python -m pip install flake8
+    # - name: Run linting tests
+    #   run: | 
+    #     flake8 src/model/
     - name: Install pytest
       run: |
-        python -m pip install pytest
+        python -m pip install -r requirements.txt
     - name: Run unit test
       run: | 
         pytest tests/
