--- a/.github/workflows/04-code-checks.yml
+++ b/.github/workflows/04-code-checks.yml
@@ -22,7 +22,7 @@ jobs:
     # - name: Run linting tests
     #   run: | 
     #     flake8 src/model/
-    - name: Install pytest
+    - name: Install requirements
       run: |
         python -m pip install -r requirements.txt
     - name: Run unit test
