--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -2,25 +2,28 @@ name: Manually trigger an Azure Machine Learning job
 
 on:
   pull_request:
-    branches:
-      - main
+      types:
+        - closed
+      branches:
+        - main
+
 
 jobs:
-  train:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Placeholder
-      run: echo "Will add code checks here in next challenge"
-    - name: Check out repo
-      uses: actions/checkout@main
-    - name: Install az ml extension
-      run: az extension add -n ml -y
-    - name: Azure login
-      uses: azure/login@v1
-      with:
-        creds: ${{secrets.AZURE_CREDENTIALS}}
-    - name: Trigger Azure Machine Learning job
-      run: |
-        az ml job create --file src/job.yml --web --resource-group 06aug91-rg --workspace-name amit-ml
+  if_merged:
+    if: github.event.pull_request.merged == true
+    train:
+      runs-on: ubuntu-latest
+      steps:
+      - name: Check out repo
+        uses: actions/checkout@main
+      - name: Install az ml extension
+        run: az extension add -n ml -y
+      - name: Azure login
+        uses: azure/login@v1
+        with:
+          creds: ${{secrets.AZURE_CREDENTIALS}}
+      - name: Trigger Azure Machine Learning job
+        run: |
+          az ml job create --file src/job.yml --web --resource-group 06aug91-rg --workspace-name amit-ml
 
 
